--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	    <div class="header">
 
 	      <div class="container">
-	        <h1 id="app_title">{{ title }}</h1>
+	        <h1 id="app_title"> {{title}} </h1>
 	      </div>
 
 	    </div>
@@ -34,21 +34,24 @@
 
 	      <div class="row">
 
-	        <div class="col-md-6">
+	        <div class="col-md-6" v-for="(movie, index) in movies" :key="movie.id">
 	            <div class="thumbnail">
 
-						<img class="poster img-fluid"/>
-						<div class="imageInfo">{{posterindex }}</div>
+						<img class="poster img-fluid" :src="movies[index].posters[0]" />
+						<div class="imageInfo">{{ movies [index].posterindex + 1 }} of {{ movies [index].posters.length }}</div>
 
-						<p class="title">{{ title }} ({{country}})</p>
-						<p class="score"><i class="bi bi-star" aria-hidden="true"></i> {{iscore}} </p>
-						<p class="runtime">Runtime: {{runtime}}</p>
-						<p class="released">Released: {{released}} | Rated: {{rating}}</p>
-						<p class="websites">Websites: <a> imdb </a> | <a>website</a></p>
-
+						<p class="title">{{movies[index].title }} ({{movies[index].country }}) </p>
+						<p class="score"><i class="bi bi-star" aria-hidden="true"></i> {{movies[index].iscore }} </p>
+						<p class="runtime">Runtime: {{movies[index].runtime }} minutes</p>
+						<p class="released">Released: {{getMonthText(movies[index].released) }} | Rated: {{movies[index].rating }} </p>
+						<p class="websites">
+							Websites: <a :href="movies[index].imdb" target="_blank">IMDB</a> | 
+							<a :href="movies[index].website" target="_blank">Official Website</a>
+						</p>
+						
 			            <div class="social">
-			              <p class="likes"><i class="bi bi-hand-thumbs-up" aria-hidden="true"></i> {{likes}}</p>
-			              <p class="dislikes"><i class="bi bi-hand-thumbs-down"></i> {{dislikes}}</p>
+			              <p class="likes" @click="movie.likes++"><i class="bi bi-hand-thumbs-up" aria-hidden="true"></i> {{movies[index].likes }}</p>
+			              <p class="dislikes" @click="movie.dislikes++"><i class="bi bi-hand-thumbs-down"></i> {{movies[index].dislikes }}</p>
 			            </div>
 	            </div>
 	        </div>
@@ -58,8 +61,8 @@
 
 	    <div class="footer">
 	      <div class="container">
-			<a id="github" class="btn btn-lg btn-warning" :href="github">
-				<i class="bi bi-github me-2"></i>{{ owner }}
+			<a id="github" class="btn btn-lg btn-warning" target="_blank":href="github">
+				<i class="bi bi-github me-2"></i>{{owner}}
 	  		</a>
 	      </div>
 	    </div>
